--- a/src/main/resources/assets/beer_snacks/lang/en_us.json
+++ b/src/main/resources/assets/beer_snacks/lang/en_us.json
@@ -4,5 +4,7 @@
   "block.beer_snacks.palm_tree_plank_block": "Palm plank",
   "block.beer_snacks.palm_tree_log_block": "Palm log",
   "block.beer_snacks.palm_tree_leaves_block": "Palm leaves",
-  "block.beer_snacks.palm_tree_sapling_block": "Palm sapling"
+  "block.beer_snacks.palm_tree_sapling_block": "Palm sapling",
+  "block.beer_snacks.coconut_block": "Coconut block",
+  "block.beer_snacks.shaved_coconut": "Shaved coconut"
 }
