--- a/src/main/resources/assets/beer_snacks/lang/ru_ru.json
+++ b/src/main/resources/assets/beer_snacks/lang/ru_ru.json
@@ -6,5 +6,5 @@
   "block.beer_snacks.palm_tree_leaves_block": "Пальмовые листья",
   "block.beer_snacks.palm_tree_sapling_block": "Пальмовый саженец",
   "block.beer_snacks.coconut_block": "Кокос",
-  "block.beer_snacks.shaved_coconut": "Бритый кокос"
+  "item.beer_snacks.shaved_coconut": "Бритый кокос"
 }
